--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,3 +15,8 @@ services:
       MYSQL_ROOT_PASSWORD: my-secret-pw
     ports:
       - "3306:3306"
+  rabbitmq:
+    image: rabbitmq:3.12-management
+    ports:
+      - "5672:5672"
+      - "15672:15672"
