--- a/src/main/resources/application-docker.properties
+++ b/src/main/resources/application-docker.properties
@@ -1,8 +1,8 @@
 spring.output.ansi.enabled=ALWAYS
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/petrolstations
+spring.datasource.url=jdbc:mysql://db:3306/petrolstations
 spring.datasource.username=root
 spring.datasource.password=my-secret-pw
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.jpa.show-sql=true
-rabbitmq.hostname=localhost
+rabbitmq.hostname=rabbitmq
