Move docker-compose to root

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
       - "15672:15672"
 
   petrol-api:
-    build: .
+    build: petrol-api
     ports:
       - "8080:8080"
     environment:
