Feat: metrics and tracing

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,8 +27,27 @@ services:
       - "8080:8080"
     environment:
       - "SPRING_PROFILES_ACTIVE=docker"
+    depends_on:
+      - db
+      - otel-collector
+      - rabbitmq
 
   petrol-reports:
     build: petrol-reports
     ports:
       - "5000:5000"
+    depends_on:
+      - rabbitmq
+
+  otel-collector:
+    image: otel/opentelemetry-collector-contrib:0.90.1
+    command: --config=/etc/otelcol-contrib/config.yaml
+    volumes:
+      - ./otel-collector-config.yaml:/etc/otelcol-contrib/config.yaml
+
+  jaeger:
+    image: jaegertracing/all-in-one:1.51
+    ports:
+      - "16686:16686"
+    depends_on:
+      - otel-collector
