--- a/petrol-api/src/main/resources/application-docker.properties
+++ b/petrol-api/src/main/resources/application-docker.properties
@@ -1,3 +1,5 @@
+spring.application.name="petrol-api"
+spring.threads.virtual.enabled=true
 spring.output.ansi.enabled=ALWAYS
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://db:3306/petrolstations
@@ -6,3 +8,8 @@ spring.datasource.password=my-secret-pw
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.jpa.show-sql=true
 rabbitmq.hostname=rabbitmq
+management.otlp.metrics.export.url=http://otel-collector:4318/v1/metrics
+management.otlp.tracing.endpoint=http://otel-collector:4318/v1/traces
+management.tracing.sampling.probability=1.0
+#https://github.com/springdoc/springdoc-openapi/issues/2114
+springdoc.enable-kotlin=false
