--- a/petrol-api/src/main/resources/application.properties
+++ b/petrol-api/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+spring.application.name="petrol-api"
+spring.threads.virtual.enabled=true
 spring.output.ansi.enabled=ALWAYS
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/petrolstations
@@ -6,3 +8,5 @@ spring.datasource.password=my-secret-pw
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.jpa.show-sql=true
 rabbitmq.hostname=localhost
+#https://github.com/springdoc/springdoc-openapi/issues/2114
+springdoc.enable-kotlin=false
