--- a/petrol-api/src/main/resources/application-docker.properties
+++ b/petrol-api/src/main/resources/application-docker.properties
@@ -1,4 +1,4 @@
-spring.application.name="petrol-api"
+spring.application.name=petrol-api
 spring.threads.virtual.enabled=true
 spring.output.ansi.enabled=ALWAYS
 spring.jpa.hibernate.ddl-auto=update
