--- a/petrol-reports/Dockerfile
+++ b/petrol-reports/Dockerfile
@@ -38,6 +38,16 @@ RUN --mount=type=cache,target=/root/.cache/pip \
     --mount=type=bind,source=requirements.txt,target=requirements.txt \
     python -m pip install -r requirements.txt
 
+RUN pip install opentelemetry-distro
+RUN pip install opentelemetry-instrumentation-flask
+RUN pip install opentelemetry-exporter-otlp
+RUN pip install flask
+RUN pip install requests
+
+RUN opentelemetry-bootstrap -a install
+
+ENV OTEL_PYTHON_LOGGING_AUTO_INSTRUMENTATION_ENABLED=true
+
 # Switch to the non-privileged user to run the application.
 USER appuser
 
@@ -48,4 +58,12 @@ COPY . .
 EXPOSE 5000
 
 # Run the application.
-CMD python3 -m flask run --host=0.0.0.0
+# CMD python3 -m flask run --host=0.0.0.0
+# --exporter_otlp_endpoint otel-collector:4317 \
+CMD opentelemetry-instrument \
+    --traces_exporter otlp \
+    --metrics_exporter otlp \
+    --logs_exporter console \
+    --service_name petrol-reports-server \
+    --exporter_otlp_endpoint http://otel-collector:4317 \
+    flask run --host=0.0.0.0
