--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,7 @@ services:
     ports:
       - "5672:5672"
       - "15672:15672"
+      - "15692:15692"
 
   petrol-api:
     build: petrol-api
@@ -68,3 +69,17 @@ services:
       - ./metrics/prometheus/storage:/prometheus
     ports:
       - "9090:9090"
+
+  mysqld-exporter:
+    image: prom/mysqld-exporter:v0.15.1
+    command:
+      - "--mysqld.username=root:my-secret-pw"
+      - "--mysqld.address=db:3306"
+      - "--collect.info_schema.processlist"
+      - "--collect.info_schema.innodb_metrics"
+      - "--collect.info_schema.tablestats"
+      - "--collect.info_schema.tables"
+      - "--collect.info_schema.userstats"
+      - "--collect.engine_innodb_status"
+    ports:
+      - "9104:9104"
