--- a/prometheus.yml
+++ b/prometheus.yml
@@ -10,3 +10,9 @@ scrape_configs:
   - job_name: 'otel-collector-exporter-metrics'
     static_configs:
       - targets: ['otel-collector:8889']
+  - job_name: 'mysqld'
+    static_configs:
+      - targets: ['mysqld-exporter:9104']
+  - job_name: 'rabbitmq-metrics'
+    static_configs:
+      - targets: ['rabbitmq:15692']
